--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nodemon": "^3.1.9",
     "sanitizer": "^0.1.3",
     "sequelize": "^6.37.5",
-    "soap": "^1.1.7"
+    "soap": "^1.1.7",
+    "ua-parser-js": "^2.0.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
