--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - db
     volumes:
       - .:/usr/src
-      - /usr/src/node_modules
+      # - /usr/src/node_modules
     develop:
       watch:
         - action: rebuild
