--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "dev": "nodemon index.js",
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "keywords": [],
   "author": "",
@@ -28,7 +27,8 @@
     "sanitizer": "^0.1.3",
     "sequelize": "^6.37.5",
     "soap": "^1.1.7",
-    "ua-parser-js": "^2.0.0"
+    "ua-parser-js": "^2.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
