--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
+    "test:watch": "vitest watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -26,11 +29,14 @@
     "nodemon": "^3.1.9",
     "sanitizer": "^0.1.3",
     "sequelize": "^6.37.5",
+    "smile-identity-core": "^3.1.0",
     "soap": "^1.1.7",
     "ua-parser-js": "^2.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "supertest": "^7.0.0",
+    "vitest": "^3.0.4"
   }
 }
