--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "flutterwave-node-v3": "^1.1.14",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
@@ -33,6 +34,7 @@
     "smile-identity-core": "^3.1.0",
     "soap": "^1.1.7",
     "ua-parser-js": "^2.0.0",
+    "uuid": "^7.0.3",
     "winston": "^3.17.0"
   },
   "devDependencies": {
